--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "eslint-config-next": "13.2.4",
     "jszip": "^3.10.1",
     "next": "13.2.4",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remotion": "^3.3.80",
+    "styled-components": "^5.3.9",
     "typescript": "5.0.2"
   },
   "devDependencies": {
