--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
     "remotion": "^3.3.80",
     "styled-components": "^5.3.9",
     "typescript": "5.0.2"
