--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.299.0",
+    "@react-three/fiber": "^8.12.0",
     "@remotion/bundler": "^3.3.80",
+    "@remotion/media-utils": "^3.3.80",
+    "@remotion/noise": "^3.3.80",
     "@remotion/renderer": "^3.3.80",
+    "@remotion/three": "^3.3.80",
     "@types/node": "18.15.9",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
@@ -26,6 +30,7 @@
     "react-is": "^18.2.0",
     "remotion": "^3.3.80",
     "styled-components": "^5.3.9",
+    "three": "^0.151.2",
     "typescript": "5.0.2"
   },
   "devDependencies": {
